<resources>
    <string name="app_name">Higher Technological Institute</string>
    <string name="hti_services">Higher Technological Institute</string>
    <string name="this_app_provide_some_services_to_hti_student">This app provide some services to HTI student </string>
    <string name="student_can_complain">Student can complain about anything they want and also can do the questionnaire to can access their results</string>
    <string name="login">Login</string>
    <string name="login_title">Questionnaire And Complaints Management System For Hti Students</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="required">Required !</string>
    <string name="viewresult">View Result</string>
    <string name="SelectAllQuestionnaires">Please Select All Questionnaires</string>
    <string name="Thanks">Thanks</string>
    <string name="Deandoctor">Dean Login</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">questionnaires</string>
    <string name="menu_complaints">Complaints</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
    <string name="submit">submit</string>
    <string name="problem_description">Problem Description</string>
    <string name="problem_topic">problem Topic</string>
    <string name="contact_us">Contact Us</string>
    <string name="feel_free">Feel Free To Contact Us At Any Time</string>

    <string name="cs"> Computer Science</string>
    <string name="eng">Engineering</string>
    <string name="man_ar"> Management (Arabic)</string>
    <string name="man_en"> Management </string>

    <string-array name="array_depart">
        <item>Computer Science</item>
        <item>Engineering</item>
        <item> Management (Arabic)</item>
        <item> Management (English)</item>
    </string-array>

    <string-array name="array_comp_type">
        <item>individual</item>
        <item>collective</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="arabic">عربي</string>


    <string name="Title">Questionnaire Evaluation Form</string>
    <string name="namesubject">Name Course :</string>
    <string name="name_code">Code Course :</string>
    <string name="numgroup">Group number :</string>
    <string name="namedoctor">Name Instructor :</string>
    <string name="nameengineer">Name Assistant :</string>
    <string name="note">Students should choose the grade of assessment according to the following instructions :</string>
    <string name="degree5">Completely disagree</string>
    <string name="degree4"> Disagree</string>
    <string name="degree3"> Not Good Enough</string>
    <string name="degree2">Agree</string>
    <string name="degree1">Completely agree</string>
    <string name="Question1">(1) General opinions about the course</string>
    <string name="Question1.1">1.1- The course is interesting </string>
    <string name="Question1.2">1.2- The course is related to specialization</string>
    <string name="Question1.3">1.3- The course contains updated information </string>
    <string name="Question1.4">1.4-The course meets my expectations </string>
    <string name="Question1.5">1.5- The course is useful in scientific application</string>
    <string name="Question1.6">1.6- Course concept</string>
    <string name="Question1.7">1.7- The overall course is good</string>
    <string name="Question2">(2) Targeted learning outcomes</string>
    <string name="Question2.1">2.1- The goals are clear and public  </string>
    <string name="Question2.2">2.2- The course provides me with useful knowledge and in-depth understanding of the subject </string>
    <string name="Question2.3">2.3- The course motivates me to think </string>
    <string name="Question2.4">2.4- Earn professional decision-making skills that will benefit your business</string>
    <string name="Question3">(3) Lectures </string>
    <string name="Question3.1">3.1- Lectures are offered according to the order of the tables</string>
    <string name="Question3.2">3.2-  The lectures contribute to understanding the subject of the course</string>
    <string name="Question3.3">3.3-  The lectures cover all the positions in the content </string>
    <string name="Question3.4">3.4- Lectures are presented in an interesting manner </string>
    <string name="Question3.5">3.5- Lectures included participation by students </string>
    <string name="Question3.6">3.6- The lectures included practical cases</string>
    <string name="Question3.7">3.7- The amount of information presented in the lectures is appropriate</string>
    <string name="Question3.8">3.8- A book or course (note) is considered appropriate</string>
    <string name="Question4">(4) The Instructor </string>
    <string name="Question4.1">4.1- The instructor is always committed to the content of the course</string>
    <string name="Question4.2">4.2- The instructor is always committed to the start and end of the lecture</string>
    <string name="Question4.3">4.3- I feel that the instructor is always well prepared for the lecture</string>
    <string name="Question4.4">4.4- The instructor deals with the subjects of the course in depth</string>
    <string name="Question4.5">4.5- The instructor encourages students to ask questions and express their point of view</string>
    <string name="Question4.6">4.6- The instructor invests the lecture time in actual teaching </string>
    <string name="Question4.7">4.7- The instructor seems to have a high knowledge of the subject of the course </string>
    <string name="Question4.8">4.8- The instructor keeps my attention</string>
    <string name="Question4.9">4.9- The instructor treats the students with respect</string>
    <string name="Question4.10">4.10- The instructor presents examples and practical cases </string>
    <string name="Question5">(5) Assistant Professor</string>
    <string name="Question5.1">5.1- The role of the assistant professor is effective</string>
    <string name="Question5.2">5.2- A assistant professor is always willing to answer any queries</string>
    <string name="Question5.3">5.3- A assistant professor appears to be familiar with the subjects of the course</string>
    <string name="Question5.4">5.4- A assistant professor provides us with enough applications</string>
    <string name="Question5.5">5.5- The assistant professor provide assistance to each student when necessary</string>
    <string name="Question6">(6) Exams Systems </string>
    <string name="Question6.1">6.1- The exam schedule is appropriate </string>
    <string name="Question6.2">6.2- Examination dates are announced early</string>
    <string name="Question6.3">6.3- The number of exams in the classroom is appropriate </string>
    <string name="Question6.4">6.4- The examinations are objective </string>
    <string name="Question6.5">6.5- The time allotted for appropriate exams</string>
    <string name="Question6.6">6.6- The exams cover the content of the course </string>
    <string name="Question6.7">6.7- The examinations focus on the theoretical and practical aspects of the course</string>
    <string name="Question6.8">6.8- The language used in the examinations is clear and understandable</string>
    <string name="Question6.9">6.9- Examinations do not include typographical errors</string>
    <string name="Question6.10">6.10- The distribution of grades is fair</string>
    <string name="Question7">(7) Laboratories and workshops</string>
    <string name="Question7.1">7.1- The institute has enough labs to achieve the objectives of the investigation sufficient to achieve the goals of the educational process</string>
    <string name="Question7.2">7.2- Factories have modern equipment and equipment</string>
    <string name="Question7.3">7.3- The design of the plants is attractive and appropriate </string>
    <string name="Question7.4">7.4- The technicians are characterized by high efficiency laboratories </string>
    <string name="Question7.5">7.5- The space available to the laboratories is suitable for the number of students</string>
    <string name="Question7.6">7.6- The workshops available are equipped with modern equipment </string>
    <string name="Question7.7">7.7- The size of the workshops is proportional to the number of students</string>
    <string name="Question7.8">7.8- The workshop technicians are highly efficient</string>
    <string name="Question8">(8) Terraces and classrooms </string>
    <string name="Question8.1">8.1- Site</string>
    <string name="Question8.2">8.2- the size</string>
    <string name="Question8.3">8.3- Number of Seats / Punches</string>
    <string name="Question8.4">8.4- Teaching facilities (blackboard - dataManager show - projector)</string>
    <string name="Question8.5">8.5- Quiet</string>
    <string name="Question8.6">8.6- Lighting</string>
    <string name="Question8.7">8.7- Cleanliness</string>
    <string name="Question9">(9) Others </string>
    <string name="Question9.1">* What you like or do not like in the course ? </string>
    <string name="Question9.2">- I like in course: </string>
    <string name="Question9.3">- I dislike in course :  </string>
    <string name="Question9.4">* In your opinion how can you improve or develop this course !? </string>

    <string name="Notenum1">1</string>
    <string name="Notenum2">2</string>
    <string name="Notenum3">3</string>
    <string name="Notenum4">4</string>
    <string name="Notenum5">5</string>
    <string name="title_activity_department_activty">DepartmentActivty</string>
    <string name="menu_gallery">Gallery</string>
    <string name="average">The Average evaluation is </string>
    <string name="group">Group</string>
    <string name="subject">subject</string>
    <string name="num">NO.</string>
    <string name="student_name">Student Name : </string>
    <string name="student_id">Student ID :</string>
    <string name="gpa">GPA :</string>

    <string name="hti">Higher Technological Institute</string>
    <string name="student_login">Student Login</string>
    <string name="manager_login">manager Login</string>
    <string name="dean_login">Dean Login</string>
    <string name="title_activity_department_doc">DepartmentDocActivity</string>
    <string name="doctor">Doctor</string>
    <string name="avg">AVG</string>
    <string name="topic">topic of complain :</string>
    <string name="type">type of complain :</string>
    <string name="description">complain description :</string>
    <string name="department">Department :</string>
    <string name="department_title">Department</string>
</resources>
