<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.complain.ComplainFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/feel_free"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shap_lay_full">

        <Spinner
            android:id="@+id/spinner_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:entries="@array/array_depart"
            android:popupBackground="@color/white"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shap_lay_full">

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:entries="@array/array_comp_type"
            android:popupBackground="@color/white"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/ed_problem_topic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shap_lay_full"
        android:gravity="top"
        android:hint="@string/problem_topic"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp" />

    <EditText
        android:id="@+id/ed_problem_dec"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shap_lay_full"
        android:gravity="top"
        android:hint="@string/problem_description"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp" />

    <Button
        android:id="@+id/bu_suggestion_send"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_rounded_blue"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>